# rl-MetaDrive-Racing-Arena

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  tournament.yaml
docs/comprehensive/: 01-simulator-and-environment.md  02-ppo-and-learning-theory.md  03-distributed-infrastructure.md  04-evaluation-competition-and-leaderboards.md  05-advanced-methods-and-failure-modes.md  README.md
scripts/: evaluate.py  leaderboard.py  race.py  tournament.py  train.py
src/metadrive_racing_arena/: __init__.py  cli.py  config.py  elo.py  envs.py  evaluate.py  leaderboard.py  policy.py  ppo.py  race.py  tournament.py  utils.py
tests/: test_elo.py  test_leaderboard.py
