[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metadrive-racing-arena"
version = "0.1.0"
description = "Multi-agent MetaDrive racing arena with PPO agents, tournaments, and ELO leaderboards."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "metadrive-simulator>=0.4.3",
  "numpy>=1.24",
  "PyYAML>=6.0",
  "torch>=2.1",
  "tqdm>=4.66"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

